--- a/client/home.html
+++ b/client/home.html
@@ -13,6 +13,8 @@
                     <input name="ms" type="number" placeholder="milliseconds" value="100" />
                 </div>
                 <button type="submit">Make a gif!</button>
+                <br>
+                <button class="reset">Reset / clear images</button>
             </div>
         </form>
     </div>
