blaze is stupid, had to hack around to reset without reloading the page

--- a/client/home.html
+++ b/client/home.html
@@ -13,9 +13,8 @@
                     <input name="ms" type="number" placeholder="milliseconds" value="100" />
                 </div>
                 <button type="submit">Make a gif!</button>
-                <br>
-                <button class="reset">Reset / clear images</button>
             </div>
+            <button id="clear" class="reset">Reset / clear images</button>
         </form>
     </div>
     <div class="result dn">
